derive/tests/compile_fail/enum.rs
use config_derive::Deserialize;

#[derive(Deserialize)]
enum MyEnum {
    A,
    B,
}

fn main() {}
