derive/tests/compile_fail/enum.stderr
error: config::Deserialize can only be derived for structs with named fields
 --> tests/compile_fail/enum.rs:4:6
  |
4 | enum MyEnum {
  |      ^^^^^^
